[package]
name = "rsh"
version = "0.1.2"
edition = "2021"
authors = ["Raudel Alejandro Gómez Molina <raudel.gmolina@gmail.com>"]
readme = "README.md"
license-file = "LICENCE"
repository = "https://github.com/raudel25/rsh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.141"
rustyline = "11.0.0"
colored = "2.0"
nix = "0.26.2"
